kubernetes/apps/app-cluster/storage/nginx-test/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: storage
  labels:
    app: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - name: nginx
          image: nginx:1.31.6
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-storage
              mountPath: "/usr/share/nginx/html"
          command: ["/bin/bash", "-c"]
          args:
            - |
              [...]
      volumes:
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: nginx-test-pvc-v2
