kubernetes/apps/app-cluster/storage/nginx-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
  namespace: storage
spec:
  selector:
    app: nginx-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
