kubernetes/apps/app-cluster/storage/nginx-test/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-test-route
  namespace: storage
  annotations:
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
    - name: envoy-external
      namespace: network
  hostnames:
    - "nginx-test.krapulax.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-test-service
          port: 80
